@@ -7,7 +7,7 @@ import pkg_resources
 
 name = "Copy"
 
-video_extensions = [".mkv", ".mp4", ".ts", ".mov", ".webm", ".avi", ".mts", ".m2ts", ".m4v"]
+video_extensions = [".mkv", ".mp4", ".ts", ".mov", ".webm", ".avi", ".mts", ".m2ts", ".m4v", ".gif", ".avif", ".webp"]
 video_dimension_divisor = 1
 icon = str(Path(pkg_resources.resource_filename(__name__, f"../../data/icons/black/onyx-copy.svg")).resolve())
 
