@@ -7,7 +7,7 @@ import pkg_resources
 
 name = "GIF"
 
-video_extensions = ["gif"]
+video_extensions = [".gif"]
 video_dimension_divisor = 1
 icon = str(Path(pkg_resources.resource_filename(__name__, f"../../data/encoders/icon_gif.png")).resolve())
 
