@@ -8,7 +8,7 @@ import pkg_resources
 name = "AVIF (SVT AV1)"
 requires = "libsvtav1"
 
-video_extensions = ["avif"]
+video_extensions = [".avif"]
 video_dimension_divisor = 8
 icon = str(Path(pkg_resources.resource_filename(__name__, f"../../data/encoders/icon_svt_av1.png")).resolve())
 
