@@ -17,7 +17,7 @@ exclude = '''
 
 [tool.poetry]
 name = "FastFlix"
-version = "5.2.0a6"
+version = "5.2.0b1"
 description = "GUI Encoder"
 license = "MIT"
 authors = ["Chris Griffith <chris@cdgriffith.com>", ]
